# jupytext-demo

./: Demo.ipynb  Demo.py  README.md  pyproject.toml
